fixed background image not showing in vercel deployment 4

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -471,10 +471,11 @@ color: inherit;
 } */
 
 .bg-engagement-7 {
-  background-image: url("/assets/ADP_1855.jpg");
+  background-image: url("/assets/ADP_1855.JPG");
   background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
+  background-attachment: local;
+  background-size: contain;
+  background-position: 0px -300px;
 }
 
 /* .bg-engagement-8 {
